--- a/lottery-ui/src/index.css
+++ b/lottery-ui/src/index.css
@@ -1,24 +1,33 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.site-layout {
+    min-height: 100vh;
+}
 
-a {
-  color: #0e7490;
-  text-decoration: none;
-  font-weight: 500;
-  box-shadow: inset 0 -0.125em 0 0 #fff, inset 0 -0.375em 0 0 rgb(165 243 252 / 40%);
+.site-layout .site-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-layout .site-layout-content {
+    padding: 16px;
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+}
+
+.site-layout .site-header .logo {
+    margin: 0;
+}
+
+.monospace {
+    font-family: 'monospace' 
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
 }
